[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "near-jsonrpc-client"
version = "0.1.0"
description = "A typed Python client for the NEAR JSON-RPC API with Pydantic models and async HTTP support"
requires-python = ">=3.9"

dependencies = [
    "httpx",
    "pydantic>=2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]